Second big commit, basic funcionality

--- a/app/src/main/res/layout/activity_elegir_cartas.xml
+++ b/app/src/main/res/layout/activity_elegir_cartas.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundBlue"
     tools:context=".ElegirCartas">
 
     <androidx.constraintlayout.widget.Guideline
@@ -88,7 +89,9 @@
         android:layout_width="170dp"
         android:layout_height="65dp"
         android:gravity="center"
-        android:text="Fácil"
+        android:text="Fáciles"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline23"
         app:layout_constraintEnd_toStartOf="@+id/guideline25"
         app:layout_constraintStart_toStartOf="@+id/guideline18"
@@ -99,7 +102,9 @@
         android:layout_width="170dp"
         android:layout_height="65dp"
         android:gravity="center"
-        android:text="Intermedio"
+        android:text="Intermedias"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline24"
         app:layout_constraintEnd_toStartOf="@+id/guideline25"
         app:layout_constraintStart_toStartOf="@+id/guideline18"
@@ -110,7 +115,9 @@
         android:layout_width="170dp"
         android:layout_height="65dp"
         android:gravity="center"
-        android:text="Difícil"
+        android:text="Difíciles"
+        android:textColor="@color/white"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline22"
         app:layout_constraintEnd_toStartOf="@+id/guideline25"
         app:layout_constraintStart_toStartOf="@+id/guideline18"
@@ -118,10 +125,12 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="180dp"
-        android:layout_height="76dp"
+        android:layout_width="211dp"
+        android:layout_height="48dp"
+        android:background="@drawable/btn_shape"
         android:onClick="startGame"
-        android:text="Button"
+        android:text="Confirmar"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline21"
         app:layout_constraintEnd_toStartOf="@+id/guideline27"
         app:layout_constraintStart_toStartOf="@+id/guideline28"
@@ -131,7 +140,9 @@
         android:id="@+id/spinnerFacil"
         android:layout_width="135dp"
         android:layout_height="60dp"
+        android:backgroundTint="@color/white"
         android:entries="@array/spinnerValues"
+        android:foregroundTint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline23"
         app:layout_constraintEnd_toStartOf="@+id/guideline19"
         app:layout_constraintStart_toStartOf="@+id/guideline25"
@@ -141,7 +152,9 @@
         android:id="@+id/spinnerMedio"
         android:layout_width="135dp"
         android:layout_height="60dp"
+        android:backgroundTint="@color/white"
         android:entries="@array/spinnerValues"
+        android:foregroundTint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline24"
         app:layout_constraintEnd_toStartOf="@+id/guideline19"
         app:layout_constraintStart_toStartOf="@+id/guideline25"
@@ -151,7 +164,9 @@
         android:id="@+id/spinnerDificil"
         android:layout_width="135dp"
         android:layout_height="60dp"
+        android:backgroundTint="@color/white"
         android:entries="@array/spinnerValues"
+        android:foregroundTint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline22"
         app:layout_constraintEnd_toStartOf="@+id/guideline19"
         app:layout_constraintStart_toStartOf="@+id/guideline25"
