--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/BackgroundBlue"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.Guideline
@@ -94,8 +95,11 @@
         android:id="@+id/btnStartGame"
         android:layout_width="285dp"
         android:layout_height="67dp"
+        android:background="@drawable/btn_shape"
         android:onClick="startActivityTablero"
-        android:text="Start"
+        android:text="Empezar"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.477"
@@ -110,6 +114,7 @@
         android:hint="Nombre del equipo..."
         android:imeOptions="actionDone"
         android:inputType="text"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline6"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -122,6 +127,7 @@
         android:ems="10"
         android:inputType="number"
         android:text="6"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -134,7 +140,8 @@
         android:layout_height="50dp"
         android:ems="10"
         android:inputType="number"
-        android:text="20"
+        android:text="40"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toStartOf="@+id/guideline10"
         app:layout_constraintHorizontal_bias="0.026"
@@ -147,6 +154,7 @@
         android:layout_height="50dp"
         android:gravity="left|center_vertical"
         android:text="Tiempo"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toStartOf="@+id/guideline11"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -158,6 +166,7 @@
         android:layout_height="50dp"
         android:gravity="left|center_vertical"
         android:text="Rondas"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline7"
         app:layout_constraintEnd_toStartOf="@+id/guideline12"
         app:layout_constraintHorizontal_bias="1.0"
@@ -166,8 +175,10 @@
 
     <ListView
         android:id="@+id/equiposListView"
-        android:layout_width="365dp"
-        android:layout_height="281dp"
+        android:layout_width="305dp"
+        android:layout_height="257dp"
+        android:backgroundTint="@color/white"
+        android:foregroundTint="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
